# speccourse_GNU-Linux

./: README.md
 06_Debugging/:  double-free .c
03_TerminalProject/: Show.c
04_Multifile/: Makefile  errorfile  prog-a  prog-so  prog-so-test2  prog-test1
05_Environmental/: Makefile.am  configure.ac  pcreshow.c  prog
08_TestingCoverage/: Makefile.am  configure.ac
08_TestingCoverage/src/: Makefile.am  Makefile.in  buf.c  tests.c
08_TestingCoverage/tests/: Makefile.am  init.ts  push.ts
10_Documenting/: Makefile.am  configure.ac  doxyfile.in  guessnumber.c  ru.po
11_Toolkits/: Makefile.am  configure.ac  word_counter.c
12_ScriptingText/: Makefile.am  configure.ac
12_ScriptingText/src/: Makefile.am  buf.c  buf.h  libbuf.c
12_ScriptingText/tests/: init.ts  pop.ts  push.ts
13_PatchInstall/: Makefile.am  configure.ac  guessnumber.c  guessnumber.pot  ru.po
